# reflection

./: .gitignore  README.md  reflection_demo
cpp/: 1_enum_string.h  2_json_serialize.h  3_describe.h  4_generic_equal.h  CMakeLists.txt  main.cpp  types.h
python/: reflection_demo.py
